#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Server"
name = "td-server"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bin]]
name = "tdserver"
path = "src/tdserver.rs"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "bootloader"
path = "src/bootloader.rs"

[[bin]]
name = "apiserver"
path = "src/apiserver.rs"

[[bin]]
name = "importer"
path = "src/importer.rs"

[[bin]]
name = "transporter"
path = "src/transporter.rs"

[[example]]
name = "apisimple"
path = "examples/server/apisimple.rs"

[[example]]
name = "towerservice"
path = "examples/tower/service.rs"

[[example]]
name = "tableframe"
path = "examples/tableframe/extension.rs"

[[example]]
name = "log2file"
path = "examples/telemetry/log2file.rs"

[[example]]
name = "log2stdout"
path = "examples/telemetry/log2stdout.rs"

[[example]]
name = "helloworold"
path = "examples/hello/helloworld.rs"

[[example]]
name = "hal"
path = "examples/dummy/hal.rs"

[[example]]
name = "tars"
path = "examples/dummy/tars.rs"

[features]
api-docs = []
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test_tower_metadata = ["td-tower/test_tower_metadata"]
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "clap_derive", "getset", "http", "paste", "serde", "serde_json", "strum", "strum_macros", "toml", "utoipa-axum"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# Internal dependencies


## Macros

td-apiforge = { workspace = true }
td-build = { workspace = true }
tm-workspace = { workspace = true }

## Libraries

td-apiserver = { workspace = true }
td-common = { workspace = true }
td-database = { workspace = true }
te-tableframe = { workspace = true }
ta-tableframe = { workspace = true }
td-shuttle = { workspace = true }
td-storage = { workspace = true }
td-supervisor = { workspace = true }
td-tower = { workspace = true }

## Extensions

# External dependencies

axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
clap_derive = { workspace = true}
colored = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
paste = { workspace = true }
path-slash = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
supports-color = { workspace = true }
textwrap = { workspace = true }
terminal_size = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["buffer", "limit", "make", "timeout", "util"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
utoipa-axum = { workspace = true }

[dev-dependencies]
td-common = { workspace = true, features = ["td-test"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
