#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Server"
name = "td-server"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bin]]
name = "tdabout"
path = "src/tdabout.rs"

[[bin]]
name = "tdserver"
path = "src/tdserver.rs"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "bootloader"
path = "src/bootloader.rs"

[[bin]]
name = "apiserver"
path = "src/apiserver.rs"

[[bin]]
name = "transporter"
path = "src/transporter.rs"

[features]
api-docs = []
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test_tower_metadata = ["td-tower/test_tower_metadata"]
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "paste", "toml", "utoipa", "utoipa-axum", "td-tower", "windows"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

[dependencies]

# Internal dependencies


## Macros

td-build = { workspace = true }
tm-workspace = { workspace = true }

## Libraries

td-apiserver = { workspace = true }
td-common = { workspace = true }
td-database = { workspace = true }
td-objects = { workspace = true }
td-process = { workspace = true }
td-services = { workspace = true }
td-shuttle = { workspace = true }
td-storage = { workspace = true }
td-supervisor = { workspace = true }
td-tower = { workspace = true }

## Extensions

# External dependencies

clap = { workspace = true, features = ["derive"] }
path-slash = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
td-common = { workspace = true, features = ["td-test"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"] }
windows-sys = { workspace = true, features = ["Win32", "Win32_System_Threading", "Win32_System_Console"] }
