#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata Apiserver API"
edition = { workspace = true }
name = "ta-apiserver"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]

[features]
api-docs = []
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl"]

# Build dependencies

[build-dependencies]

# Internal dependencies

# External dependencies

[dependencies]

# Internal dependencies

## Macros

## Libraries

# External dependencies

axum = { workspace = true }

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }