#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata API Server API"
name = "ta-apiserver"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]
api-docs = []
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "strum", "thiserror"]

# Build dependencies

[build-dependencies]

# Internal dependencies

# External dependencies

[dependencies]

# Internal dependencies

td-error = { workspace = true }
td-objects = { workspace = true }
td-tower = { workspace = true }

## Macros

## Libraries

# External dependencies

axum = { workspace = true, features = ["macros"] }
derive_builder = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
