#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata System API"
name = "ta-system"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]
enterprise = []
dummy = []
mock-env = []
td-test = ["dummy", "mock-env", "test-utils"]
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "td-build"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

[dependencies]

# Internal dependencies

## Libraries

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
