#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Plugin API"
name = "ta-tableframe"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[example]]
name = "ta-tableframe"
path = "examples/ta-tableframe.rs"

[lib]

[features]
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test_logging = []
test_tower_metadata = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "td-build", "td-common", "toml"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# Internal dependencies

## Libraries

td-common = { workspace = true }

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
