#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata Apiserver"
name = "td-apiserver"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]
api-docs = []
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test_tower_metadata = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

[dependencies]

# Internal dependencies

## Macros

td-error = { workspace = true }

## Libraries

ta-apiserver = { workspace = true }
td-apiforge = { workspace = true }
td-authz = { workspace = true }
td-build = { workspace = true }
td-common = { workspace = true }
td-database = { workspace = true }
td-objects = { workspace = true }
td-process = { workspace = true }
td-security = { workspace = true }
td-services = { workspace = true }
td-storage = { workspace = true }
td-tower = { workspace = true }
te-apiserver = { workspace = true }
te-execution = { workspace = true }
te-services = { workspace = true }

# External dependencies

async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["query"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
chrono = { workspace = true }
clap = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["buffer", "limit", "make", "timeout", "util"] }
tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }
utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "reqwest"] }

[dev-dependencies]
td-common = { workspace = true, features = ["td-test"] }
td-objects = { workspace = true, features = ["td-test"] }
td-services = { workspace = true, features = ["td-test"] }
td-storage = { workspace = true, features = ["td-test"] }
td-test = { workspace = true, features = ["td-test"] }
testdir = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
