#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata Authorization Logic"
edition = { workspace = true }
name = "td-authz"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]

[features]
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
sqlx_log = []
test_logging = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "tokio"]

# Build dependencies

[build-dependencies]

# Internal dependencies

# External dependencies

[dependencies]

# Internal dependencies

## Macros

td-error = { workspace = true }

## Libraries

td-common = { workspace = true }
td-database = { workspace = true }
td-objects = { workspace = true }
td-schema = { workspace = true }
td-security = { workspace = true }

# External dependencies

async-trait = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
td-objects = { workspace = true, features = ["td-test"] }
td-test = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }