#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Common Features"
name = "td-common"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test_logging = []
test_tower_metadata = []
test-utils = []
tokio_console = ["console-subscriber"]

[package.metadata.cargo-machete]
ignored = ["openssl", "strum", "td-build", "toml", "utoipa"]

# Build dependencies

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# Internal dependencies

td-error = { workspace = true }
td-security = { workspace = true }

## Macros

td-apiforge = { workspace = true }
td-attach = { workspace = true }

# External dependencies

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_derive = { workspace = true }
config = { workspace = true, features = ["yaml"] }
console-subscriber = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
data-encoding = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
getset = { workspace = true }
homedir = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["process"] }
num-format = { workspace = true }
once_cell = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
pico-args = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "macros"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tempfile = { workspace = true }
testdir = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
utoipa = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
windows = { workspace = true, features = ["Win32", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
